# BayesFlow

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BCDMEM.ipynb  BayesFlow_Levy.ipynb  BayesFlow_Levy_Cython.ipynb  BayesFlow_Workflow.ipynb  CHANGELOG.rst  CITATION.cff  CNAME  CONTRIBUTING  CONTRIBUTING.md  Corona_Transformer.ipynb  Evidential_ExpLogNormalGamma.ipynb  Evidential_RDM_LFM.ipynb  Evidential_Workflow.ipynb  INSTALL.rst  ITmeasures.ipynb  LICENSE  LVdata.npy  MetaAmortized_Template.ipynb  Meta_Workflow.ipynb  ModelComparison_VAE_LFM_RDM.ipynb  ModelSelection_Evidential_BF.ipynb  ModelSelection_Evidential_BF_GaussianMixture.ipynb  ModelSelection_Evidential_Diffusion-Copy1.ipynb  ModelSelection_Evidential_Diffusion.ipynb  ModelSelection_Evidential_Diffusion6.ipynb  ModelSelection_Evidential_DiffusionMultiple.ipynb  ModelSelection_Evidential_Ecology.ipynb  ModelSelection_Evidential_Epidemiology.ipynb  ModelSelection_Evidential_HH.ipynb  ModelSelection_Evidential_IGT.ipynb  ModelSelection_Evidential_Memory.ipynb  ModelSelection_Evidential_Template.ipynb  ModelSelection_Evidential_ToyExpGammaLogNorm.ipynb  ModelSelection_Evidential_ToyExpGammaLogNorm_Cent.ipynb  ModelSelection_Evidential_TumorGrowth.ipynb  ModelSelection_Markov_Jump_Process.ipynb  Model_Comparison_Workflow.ipynb  (+29 more)
JOSS/: paper.bib  paper.md
_examples/: Amortized_Point_Estimation.html  Covid19_Initial_Posterior_Estimation.html  Hierarchical_Model_Comparison_MPT.html  Intro_Amortized_Posterior_Estimation.html  LCA_Model_Posterior_Estimation.html  Linear_ODE_system.html  Model_Comparison_MPT.html  Model_Misspecification.html  TwoMoons_Bimodal_Posterior.html
_modules/: index.html
_sources/: about.rst  index.rst
_sources/api/: modules.rst  (+5 more)
api/: advanced_documentation.html  bayesflow.amortizers.html  bayesflow.attention.html  bayesflow.benchmarks.bernoulli_glm.html  bayesflow.benchmarks.bernoulli_glm_raw.html  bayesflow.benchmarks.gaussian_linear.html  bayesflow.benchmarks.gaussian_linear_uniform.html  bayesflow.benchmarks.gaussian_mixture.html  bayesflow.benchmarks.html  bayesflow.benchmarks.inverse_kinematics.html  bayesflow.benchmarks.lotka_volterra.html  bayesflow.benchmarks.sir.html  bayesflow.benchmarks.slcp.html  bayesflow.benchmarks.slcp_distractors.html  bayesflow.benchmarks.two_moons.html  bayesflow.computational_utilities.html  bayesflow.configuration.html  bayesflow.coupling_networks.html  bayesflow.default_settings.html  bayesflow.diagnostics.html  bayesflow.exceptions.html  bayesflow.experimental.html  bayesflow.experimental.rectifiers.html  bayesflow.helper_classes.html  bayesflow.helper_functions.html  bayesflow.helper_networks.html  bayesflow.html  bayesflow.inference_networks.html  bayesflow.losses.html  bayesflow.mcmc.html  bayesflow.networks.html  bayesflow.sensitivity.html  bayesflow.simulation.html  bayesflow.summary_networks.html  bayesflow.trainers.html  bayesflow.version.html  bayesflow.wrappers.html  modules.html
assets/: benchmark_network_architectures.py  benchmark_netwotk_architectures.py
bayesflow/: __init__.py  amortized_inference.py  amortizers.py  attention.py  buffer.py  computational_utilities.py  configuration.py  coupling_networks.py  default_settings.py  diagnostics.py  exceptions.py  experimental.py  forward_inference.py  helper_classes.py  helper_functions.py  helper_networks.py  helpers.py  inference_networks.py  losses.py  mcmc.py  models.py  networks.py  sensitivity.py  simulation.py  summary_networks.py  trainers (copy).py  trainers.py  types.py  version.py  wrappers.py
deep_bayes/: diagnostics.py  losses.py  models.py  settings.py  training.py  utils.py  viz.py
docs/: Makefile  conf.py  index.rst  sphinx_autodoc.sh  sphinx_build_doc.sh  support.rst  tutorials.rst
docsrc/: Makefile  make.bat
examples/: 2024-07-04 Two Moons.ipynb  2024-07-19 Two Moons.ipynb  2024-07-19 Two Moons.py  2024-08-16 Model Comparison.ipynb  2024-08-22 Summary Network.ipynb  Amortized_Point_Estimation.ipynb  ConsistencyModel.ipynb  Covid19_Initial_Posterior_Estimation.ipynb  Hierarchical_Model_Comparison_MPT.ipynb  Intro_Amortized_Posterior_Estimation.ipynb  LCA_Model_Posterior_Estimation.ipynb  Linear_ODE_system.ipynb  Model_Comparison_MPT.ipynb  Model_Misspecification.ipynb  SBML_Model_Posterior_Estimation.ipynb  Two Moons Testbed 2024-07-10.ipynb  TwoMoons_Bimodal_Posterior.ipynb  TwoMoons_ConsistencyModel.ipynb  TwoMoons_FlowMatching.ipynb  basic_normal.ipynb  cif.ipynb  michaelis_menten_BED_tutorial.ipynb  mm_gsn.stan  moons_cif.ipynb  multinpe.ipynb
experimental/: MetaBayesFlow_Invariant_t.ipynb  helpers.py  trainers.py
hierarchical/: .Rhistory  DatSimSAE.RData  SAE_model.ipynb  functionDataGenerationSAE.R
legacy/: Covid19_SEICR_ChangePoint_Germany_Final.ipynb  GMM_cINN_Example.ipynb  Losses.npy  ModelSelection_Evidential_BF.ipynb  ModelSelection_Evidential_Diffusion5.ipynb  ModelSelection_Evidential_Epidemiology.ipynb  ModelSelection_Evidential_HH.ipynb  ModelSelection_Evidential_IGT.ipynb  ModelSelection_Evidential_Memory.ipynb  ModelSelection_Evidential_ToyExpGammaLogNorm_Cent.ipynb  ModelSelection_Evidential_Toy_BayesianRegression.ipynb  ModelSelection_Evidential_Toy_GaussianMixture.ipynb  ParameterEstimation_INN_Gaussian_Variance.ipynb  ParameterEstimation_INN_Template.ipynb  Ricker_Comparison.ipynb  Wins.npy  playground.ipynb
sbi/: buffer.py  diagnostics.py  exceptions.py  helpers.py  losses.py  models.py  trainers.py
scripts/: Intro_Amortized_Posterior_Estimation.md
simulators/: diffusion_lib.py  levy.c  levy.cp37-win_amd64.pyd  levy.pyx  levy_api.h  levy_simulator.py  setup.py
tests/: conftest.py  example_objects_for_tests.py  test_amortized_inference.py  test_amortizers.py  test_applications.py  test_attention.py  test_benchmarks.py  test_computational_utilities.py  test_coupling_networks.py  test_experimental.py  test_forward_inference.py  test_helper_networks.py  test_helpers.py  test_inference_networks.py  test_keras.py  test_models.py  test_networks.py  test_sensitivity.py  test_simulation.py  test_summary_networks.py  test_trainers.py
(+1279 files in other folders)
