[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesflow"
version = "2.0.0"
authors = [{ name = "The BayesFlow Team" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "Amortizing Bayesian Inferene With Neural Networks"
license = { file = "LICENSE" }

requires-python = ">= 3.10, < 3.12"
dependencies = [
    "keras ~= 3.3.0",
    "numpy ~= 1.26.4",
    "scipy ~= 1.13",
]

[tool.setuptools]
py-modules = []
