[metadata]
name = bayesflow
version = attr: bayesflow.version.__version__
description = "Amortizing Bayesian Inference With Invertible Neural Networks"
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/stefanradev93/bayesflow
project_urls =
    Bug Tracker = https://github.com/stefanradev93/bayesflow/issues
    Documentation = https://bayesflow.readthedocs.io
    Changelog = https://github.com/stefanradev93/bayesflow/blob/future/CHANGELOG.rst

author = The BayesFlow Developers
maintainer = Stefan Radev

license = MIT
license_files = LICENSE

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords =
    amortized Bayesian inference
    invertible neural networks

[options]
python_requires = >= 3.8
packages =
    bayesflow
package_dir = 
    =.
install_requires =
    h5py >= 3.6.0
    numba >= 0.55.0
    numpy >= 1.21.0
    pandas >= 1.4.1
    scikit-learn >= 1.0.2
    scipy >= 1.8.0
    seaborn >= 0.11.2
    tensorflow >= 2.8.0
    tqdm >= 4.63.0
    matplotlib >= 3.5.1
    m2r2 >= 0.3.2
    ipykernel >= 6.9.2
    ipywidgets >= 7.6.5

[options.extras_require]
test =
    pytest >= 5.4.3
    tensorflow_probability >= 0.16.0
