[metadata]
name = bayesflow
version = attr: bayesflow.version.__version__
description = "Amortizing Bayesian Inference With Neural Networks"
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/stefanradev93/bayesflow
project_urls =
    Bug Tracker = https://github.com/stefanradev93/bayesflow/issues
    Documentation = https://bayesflow.readthedocs.io
    Changelog = https://github.com/stefanradev93/bayesflow/blob/future/CHANGELOG.rst

author = The BayesFlow Developers
maintainer = Stefan T. Radev

license = MIT
license_files = LICENSE

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords =
    amortized Bayesian inference
    invertible neural networks
    simulation-based inference
    approximate Bayesian computation
    model comparison

[options]
python_requires = >=3.10
packages = find:
install_requires =
    h5py >= 3.7
    numpy >= 1.23
    pandas >= 1.4
    scikit-learn >= 1.0
    aesara >= 2.8
    scipy >= 1.8
    seaborn >= 0.11
    tqdm >= 4.65
    matplotlib >= 3.5
    tensorflow-macos >= 2.10, < 2.16; sys_platform == 'darwin' and platform_machine == 'x86_64'
    tensorflow >= 2.10.1, < 2.16; sys_platform != 'darwin' or platform_machine == 'arm64'
    tensorflow_probability >= 0.17, < 0.24

[options.extras_require]
testing =
    flake8 >= 3.9
    tox >= 3.24
    pytest >= 6.0
    pytest-xdist >= 2.4.0
    pytest-cov >= 2.10.0
    mypy >= 0.910
docs =
    sphinx >= 5.1.0
    sphinx-book-theme>=0.2.0
    numpydoc >= 1.2.1
    myst_nb >= 0.13.1
    sphinx_design >= 0.4.1

[flake8]
max-line-length = 120
